package eu.h2020_5gtango.vnv.lcm.model

class NetworkServiceInstance {

    String networkServiceInstanceId

    String networkServiceId

    String status

    Map runtime
}
