package eu.h2020_5gtango.vnv.lcm.model

class PackageMetadata {
    List<NetworkService> networkServices
    List<TestSuite> testSuites
}
